# paimon-rust

./: Cargo.toml  Makefile
.github/workflows/: ci.yml  release-go-binding.yml  release-rust.yml
crates/integration_tests/: Cargo.toml
crates/integration_tests/tests/: append_tables.rs
crates/integrations/datafusion/src/: lib.rs
crates/integrations/datafusion/src/physical_plan/: mod.rs  sink.rs
crates/integrations/datafusion/src/system_tables/: branches.rs  mod.rs
crates/integrations/datafusion/src/table/: mod.rs
crates/integrations/datafusion/tests/: system_tables.rs
crates/paimon/: Cargo.toml
crates/paimon/src/: error.rs  lib.rs
crates/paimon/src/arrow/format/: mod.rs  parquet.rs
crates/paimon/src/btree/: block.rs  footer.rs  key_serde.rs  meta.rs  mod.rs  query.rs  reader.rs  sst_file.rs  test_util.rs  tests.rs  var_len.rs  writer.rs
crates/paimon/src/catalog/: filesystem_1.rs
crates/paimon/src/consumer/: consumer.rs  consumer_manager.rs  mod.rs
crates/paimon/src/io/: file_io.rs  storage.rs
crates/paimon/src/spec/: binary_row.rs  consumer.rs  core_options.rs  index_file_meta.rs  index_manifest.rs  mod.rs  partition_utils.rs  schema.rs
crates/paimon/src/table/: branch_manager.rs  bucket_filter.rs  consumer_manager.rs  consumer_manager_1.rs  global_index_scanner.rs  mod.rs  read_builder.rs  row_id_predicate.rs  schema_manager.rs  snapshot_manager.rs  source.rs  table_commit.rs  table_scan.rs  table_write.rs  tag_manager.rs  write_builder.rs
crates/paimon/src/vortex/: format.rs  format_impl.rs  format_options.rs  mod.rs  reader.rs  types.rs  utils.rs  validation.rs  writer.rs
dev/: docker-compose.yaml
dev/spark/: Dockerfile  provision.py  spark-defaults.conf
