# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[workspace]
resolver = "2"
members = ["crates/paimon", "crates/integration_tests", "bindings/c", "bindings/python", "crates/integrations/datafusion"]

[workspace.package]
version = "0.1.0"
edition = "2021"
homepage = "https://paimon.apache.org/docs/rust/"
repository = "https://github.com/apache/paimon-rust"
license = "Apache-2.0"
rust-version = "1.86.0"

[workspace.dependencies]
arrow = "57.0"
arrow-array = { version = "57.0", features = ["ffi"] }
arrow-buffer = "57.0"
arrow-schema = "57.0"
arrow-cast = "57.0"
arrow-ord = "57.0"
arrow-select = "57.0"
datafusion = "52.3.0"
datafusion-ffi = "52.3.0"
parquet = "57.0"
tokio = "1.39.2"
tokio-util = "0.7"
